--- a/NishantGarden-2/src/module/gui/StartScreenView.fxml
+++ b/NishantGarden-2/src/module/gui/StartScreenView.fxml
@@ -13,10 +13,11 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-border-width: 1px;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="module.gui.StartScreenController">
    <children>
+   
       <Pane layoutX="-2.0" layoutY="514.0" maxWidth="800.0" prefHeight="87.0" prefWidth="800.0">
          <children>
             <Label id="GardenStatus" fx:id="GardenStatus" layoutX="17.0" layoutY="11.0" text="Press Start Garden to create new garden with your selected configuration . ." />
-            <Button layoutX="360.0" layoutY="49.0" mnemonicParsing="false" onAction="#clickedButtonStartGarden" text="Start Garden" />
+            <Button fx:id="StartGarden" layoutX="360.0" layoutY="49.0" mnemonicParsing="false" onAction="#ButtonStartGarden" text="Start Garden" />
          </children>
       </Pane>
       <Label layoutX="22.0" layoutY="5.0" prefHeight="85.0" prefWidth="755.0" text="Your Garden has 6 sections. You can plant different types of plants in each section. Use following Menu to decide configuration of each section of the garden. Click on the 'Edit' button if you wish to change the default configuration" textAlignment="JUSTIFY" wrapText="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
@@ -25,7 +26,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="119.0">
                <children>
                   <Text layoutX="18.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 1" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="171.0" layoutY="1.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="171.0" layoutY="1.0" mnemonicParsing="false" onAction="#ButtonEditSection1" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" layoutX="22.0" layoutY="33.0" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
@@ -48,7 +49,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
@@ -108,7 +109,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
@@ -168,7 +169,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
@@ -232,7 +233,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
@@ -292,7 +293,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
@@ -352,7 +353,7 @@
                               <Insets left="5.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label text="Label" GridPane.rowIndex="3">
+                        <Label text="Sensors" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
