--- a/NishantGarden-2/src/module/gui/SectionEditorView.fxml
+++ b/NishantGarden-2/src/module/gui/SectionEditorView.fxml
@@ -1,31 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="550.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="module.gui.SectionEditorController">
+<AnchorPane prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="module.gui.SectionEditorController">
    <children>
       <Pane layoutX="6.0" layoutY="7.0" prefHeight="242.0" prefWidth="242.0" style="-fx-background-color: #ccffcc;" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Plant" />
+            <RadioButton layoutX="20.0" layoutY="50.0" mnemonicParsing="false" selected="true" text="Wheat">
+               <toggleGroup>
+                  <ToggleGroup fx:id="plantsToggleGroup" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton layoutX="20.0" layoutY="80.0" mnemonicParsing="false" text="Lemons" toggleGroup="$plantsToggleGroup" />
+            <RadioButton layoutX="20.0" layoutY="110.0" mnemonicParsing="false" text="Vegitables" toggleGroup="$plantsToggleGroup" />
+            <RadioButton layoutX="140.0" layoutY="50.0" mnemonicParsing="false" text="Corn" toggleGroup="$plantsToggleGroup" />
+            <RadioButton layoutX="140.0" layoutY="80.0" mnemonicParsing="false" text="Rice" toggleGroup="$plantsToggleGroup" />
+            <RadioButton layoutX="140.0" layoutY="110.0" mnemonicParsing="false" text="Potatoes" toggleGroup="$plantsToggleGroup" />
+            <Label layoutX="10.0" layoutY="175.0" prefHeight="61.0" prefWidth="226.0" text="Select one of the plants from above for this section" wrapText="true" />
          </children>
       </Pane>
       <Pane layoutX="244.0" layoutY="14.0" prefHeight="242.0" prefWidth="242.0" style="-fx-background-color: #ccd8ff;" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Watering System" />
+            <Label layoutX="20.0" layoutY="50.0" text="Number of Sprinklers" />
+            <RadioButton layoutX="40.0" layoutY="75.0" mnemonicParsing="false" text="1">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sprinklersToggleGroup" />
+               </toggleGroup></RadioButton>
+            <RadioButton layoutX="90.0" layoutY="75.0" mnemonicParsing="false" text="5" toggleGroup="$sprinklersToggleGroup" />
+            <RadioButton layoutX="140.0" layoutY="75.0" mnemonicParsing="false" selected="true" text="10" toggleGroup="$sprinklersToggleGroup" />
          </children>
       </Pane>
       <Pane layoutX="8.0" layoutY="249.0" prefHeight="242.0" prefWidth="242.0" style="-fx-background-color: #ffd6cc;" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="5.0">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Heating System" />
+            <Label layoutX="20.0" layoutY="50.0" text="Number of Heaters" />
+            <RadioButton layoutX="40.0" layoutY="75.0" mnemonicParsing="false" text="1">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sprinklersToggleGroup1" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton layoutX="90.0" layoutY="75.0" mnemonicParsing="false" text="5">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sprinklersToggleGroup1" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton layoutX="140.0" layoutY="75.0" mnemonicParsing="false" selected="true" text="10">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sprinklersToggleGroup1" />
+               </toggleGroup>
+            </RadioButton>
          </children>
       </Pane>
       <Pane layoutX="249.0" layoutY="249.0" prefHeight="242.0" prefWidth="242.0" style="-fx-background-color: #d6d6c2;" AnchorPane.bottomAnchor="55.0" AnchorPane.rightAnchor="5.0">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Sensors" />
+            <CheckBox layoutX="20.0" layoutY="50.0" mnemonicParsing="false" selected="true" text="Temperature Sensors" />
+            <CheckBox layoutX="20.0" layoutY="90.0" mnemonicParsing="false" selected="true" text="Humidity Sensors" />
+            <CheckBox layoutX="20.0" layoutY="130.0" mnemonicParsing="false" selected="true" text="Soil Moisture Sensor" />
          </children>
       </Pane>
       <Button fx:id="SaveButton" layoutX="424.0" layoutY="510.0" mnemonicParsing="false" onAction="#ButtonSave" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
