--- a/NishantGarden-2/src/module/gui/StartScreenView.fxml
+++ b/NishantGarden-2/src/module/gui/StartScreenView.fxml
@@ -20,7 +20,7 @@
             <Button fx:id="StartGarden" layoutX="360.0" layoutY="49.0" mnemonicParsing="false" onAction="#ButtonStartGarden" text="Start Garden" />
          </children>
       </Pane>
-      <Label fx:id="Instructions" layoutX="22.0" layoutY="5.0" prefHeight="85.0" prefWidth="755.0" text="Your Garden has 6 sections. You can plant different types of plants in each section. Use following Menu to decide configuration of each section of the garden. Click on the 'Edit' button if you wish to change the default configuration" textAlignment="JUSTIFY" wrapText="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+      <Label fx:id="Instructions" layoutX="22.0" layoutY="5.0" prefHeight="85.0" prefWidth="755.0" text="Your Garden has 6 sections. You can plant different types of plants in each section. Use following Menu to decide configuration of each section of the garden. Click on the 'Edit' button if you wish to change the default configuration. Sensors T=Temprature,H=Humidity,S=Soil." textAlignment="JUSTIFY" wrapText="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
       <SplitPane dividerPositions="0.3300423131170663, 0.6727785613540197" layoutX="58.0" layoutY="128.0" prefHeight="160.0" prefWidth="711.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="119.0">
@@ -86,7 +86,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Text layoutX="31.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 2" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="167.0" layoutY="27.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="167.0" layoutY="27.0" mnemonicParsing="false" onAction="#ButtonEditSection2" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
@@ -146,7 +146,7 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="463.0">
                <children>
                   <Text layoutX="39.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 3" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="140.0" layoutY="23.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="140.0" layoutY="23.0" mnemonicParsing="false" onAction="#ButtonEditSection3" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
@@ -210,7 +210,7 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="119.0">
                <children>
                   <Text layoutX="31.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 4" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="165.0" layoutY="31.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="165.0" layoutY="31.0" mnemonicParsing="false" onAction="#ButtonEditSection4" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
@@ -270,7 +270,7 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Text layoutX="37.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 5" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="119.0" layoutY="28.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="119.0" layoutY="28.0" mnemonicParsing="false" onAction="#ButtonEditSection5" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
@@ -330,7 +330,7 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="463.0">
                <children>
                   <Text layoutX="94.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section 6" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="2.0" />
-                  <Button layoutX="179.0" layoutY="16.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
+                  <Button layoutX="179.0" layoutY="16.0" mnemonicParsing="false" onAction="#ButtonEditSection6" text="Edit" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="2.0" />
                   <GridPane gridLinesVisible="true" prefHeight="118.0" prefWidth="233.0" style="-fx-border-width: 1;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="116.0" />
